# csi5130_steer_angle_pred

./: .gitignore  HMB_1.csv  README.md
DataspeedInc-dbw_mkz_ros-118cda0c9196/: .gitignore  ROS_BAGS.md
fileExtraction/: HMB1.csv  HMB_1.csv  HMB_1_stering.csv  extract_img_jpg.py  extract_img_jpg_1.py  play_back_SWA.py  steering_image_report_extract.py  steering_publisher.py  steering_report_extract.py  steering_subscriber.py  steering_trial.py  train_round2_part2.csv
model/: README.md  config.py  preprocess_test_data.py  preprocess_train_data.py  render_reports.R  train.py  visualize.py
model/data/: train_round2_part1.txt  train_round2_part3.txt  train_round2_part5.txt
model/submissions/: final_model_bn_vp3.csv  final_model_comma6_vp3.csv  final_model_comma_large_dropout_vp6.csv  final_model_comma_prelu_ltsm_vp6.csv  final_model_prelu_vp6.csv
rambo/: config.py  evaluation_report.Rmd  predict.py  predict_online.py  preprocess_train_data.py  render_reports.R  train.py  visualize.py
rambo/data/: train_round2_part2.txt  train_round2_part4.txt
rambo/submissions/: final_model.csv  final_model_lrelu_vp6.csv
ros_camera_playback/: CMakeLists.txt  package.xml
ros_camera_playback/launch/: mono_camera_cal.launch  mono_camera_playback.launch
