<?xml version="1.0"?>
<package format="2">
  <name>ros_camera_playback</name>
  <version>0.0.0</version>
  <description>
    Setting up the camera for playback and demonstration and calibrate a monocular camera in ROS
  </description>
  <maintainer email="svadakkeveetil@oakland.edu">Sunish Vadakkeveetil</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>roslaunch</exec_depend>

</package>
